--- a/tmpl/activity.html
+++ b/tmpl/activity.html
@@ -9,44 +9,28 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="format-detection" content="telephone=no">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144"
-          href="https://www.paypalobjects.com/webstatic/icon/pp144.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114"
-          href="https://www.paypalobjects.com/webstatic/icon/pp114.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72"
-          href="https://www.paypalobjects.com/webstatic/icon/pp72.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.paypalobjects.com/webstatic/icon/pp144.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://www.paypalobjects.com/webstatic/icon/pp114.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://www.paypalobjects.com/webstatic/icon/pp72.png"/>
     <link rel="apple-touch-icon-precomposed" href="https://www.paypalobjects.com/webstatic/icon/pp64.png"/>
     <link rel="shortcut icon" sizes="196x196" href="https://www.paypalobjects.com/webstatic/icon/pp196.png"/>
     <link rel="shortcut icon" type="image/x-icon" href="https://www.paypalobjects.com/webstatic/icon/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="https://www.paypalobjects.com/webstatic/icon/pp32.png"/>
     <title>PayPal: History</title><!-- Font and normalizer necessary for the whole library -->
-    <link rel="stylesheet"
-          href="https://www.paypalobjects.com/paypal-ui/web/fonts-and-normalize/1-1-0/fonts-and-normalize.min.css"/>
+    <link rel="stylesheet" href="https://www.paypalobjects.com/paypal-ui/web/fonts-and-normalize/1-1-0/fonts-and-normalize.min.css"/>
     <!-- Icon Font to get Icons working -->
     <link rel="stylesheet" href="https://www.paypalobjects.com/paypal-ui/web/icon-font/0-0-1/icon-font.min.css"/>
     <!-- Preload font files for better performance -->
-    <link rel="preload" as="font" type="font/woff2" crossorigin
-          href="https://www.paypalobjects.com/paypal-ui/fonts/PayPalSansBig-Regular.woff2"/>
-    <link rel="preload" as="font" type="font/woff2" crossorigin
-          href="https://www.paypalobjects.com/paypal-ui/fonts/PayPalSansBig-Medium.woff2"/>
-    <link rel="stylesheet"
-          href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/app-service-nav.ltr.css"/>
-    <link rel="stylesheet"
-          href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/paypal-sans.css"/>
-    <link rel="stylesheet"
-          href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/activity.ltr.css"/>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="https://www.paypalobjects.com/paypal-ui/fonts/PayPalSansBig-Regular.woff2"/>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="https://www.paypalobjects.com/paypal-ui/fonts/PayPalSansBig-Medium.woff2"/>
+    <link rel="stylesheet" href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/app-service-nav.ltr.css"/>
+    <link rel="stylesheet" href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/paypal-sans.css"/>
+    <link rel="stylesheet" href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/activity.ltr.css"/>
     <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">document.documentElement.className = "js";</script>
-    <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">if (!window.Intl) {
-            document.write('<script src="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/js/lib/shim/Intl.min.js"><\/script>');
-        }</script>
-    <script data-test="ieScript" nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">var isLessthanIE10 = false;
-        window.onload = function () {
-            if (isLessthanIE10) {
-                document.getElementById('js_foreground').className += ' vx_hasNavAlert';
-            }
-        }</script>
-    <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">var helpCenterSpark = function () {
-        };
+    <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">if (!window.Intl) {document.write('<script src="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/js/lib/shim/Intl.min.js"><\/script>');}</script>
+    <script data-test="ieScript" nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">var isLessthanIE10 = false;window.onload = function () {if (isLessthanIE10) {document.getElementById('js_foreground').className += ' vx_hasNavAlert';}}</script>
+    <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">
+        var helpCenterSpark = function () {};
         document.addEventListener('DOMContentLoaded', function () {
             var mountElement;
             var mountData = function (retry) {
@@ -70,13 +54,13 @@
                     }
                 });
             }
-        })</script>
+        })
+    </script>
     <script async="" defer="" src="https://www.paypalobjects.com/helpcenter/helpcenter-widget.min.js"></script>
     <script async="" defer="" src="https://www.paypalobjects.com/messaging/messaging-loader.js"></script>
-    <script defer=""
-            src="https://www.paypalobjects.com/ui-web/consumer-home/header-footer/1.58.0/dw-header-footer.js"></script>
-    <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5"
-            data-test="feedbackInitScript">document.addEventListener('DOMContentLoaded', function feedbackLinkInit() {
+    <script defer="" src="https://www.paypalobjects.com/ui-web/consumer-home/header-footer/1.58.0/dw-header-footer.js"></script>
+    <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5" data-test="feedbackInitScript">
+        document.addEventListener('DOMContentLoaded', function feedbackLinkInit() {
             let feedbackLink = document.getElementById('undefined');
             if (!feedbackLink) {
                 return;
@@ -87,20 +71,22 @@
                     PAYPAL.analytics.reloadQualtrics('undefined');
                 }
             });
-        });</script>
+        });
+    </script>
     <script nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">window.cwContext = {
             rsta: 'en_US',
             ccpg: 'US',
             encryptedAccountNumber: '',
             correlationId: ''
-        }</script>
-    <link rel="stylesheet" type="text/css"
-          href="https://www.paypalobjects.com/ui-web/consumer-home/header-footer/1.57.4/header-footer-dw.min.css"/>
+        }
+    </script>
+    <link rel="stylesheet" type="text/css" href="https://www.paypalobjects.com/ui-web/consumer-home/header-footer/1.57.4/header-footer-dw.min.css"/>
     <style nonce="94DBx2ux+NsmRQe4JK5U4HU6faF5aDmG3MfcFQbUy5/bF7/5">@media print and (max-width: 768px) {
             .vx_globalNav-container {
                 display: none;
             }
-        }</style>
+        }
+    </style>
     <!--[if lt IE 9]><script>(function (a) {var b = ('section,article,aside,hgroup,header,footer,nav,figure,figcaption,video,audio,track,embed,mark,progress,' +'meter,time,data,ruby,rt,rp,bdi,wbr,canvas,command,details,datalist,keygen,output').split(','), c = b.length;while (c) { a(b[c-=1]); }}(document.createElement));</script><link rel="stylesheet" href="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/css/ie.ltr.css" /><script src="https://www.paypalobjects.com/web/res/8c3/dc32f2ffdba21fd310785fd56544f/js/lib/shim/es5.min.js"></script><![endif]-->
 </head>
 <body data-iswireless="" data-istablet="" data-view-name="activity/index"
@@ -621,16 +607,25 @@
                                                                                      class="ppvx_text--body-strong moduleHeader withStatements nemo_activityModuleHeaderCompleted">
                                 Completed</h3>
                             <ul class="transactionList js_transactionList">
-                                <li class="ppvx_row transactionRow dateBucket"><span
-                                            class="dateBucketText ppvx_text--caption-strong"><strong>This week</strong></span>
-                                </li>
 
 
 
 
 
+                                {{ $dbc := "" }}
+                                {{ range .Transactions }}
 
-                                {{range .Transactions}}
+                                    {{ with $db := .DateBucket }}
+                                        {{ if ne $db $dbc }}
+                                            <li class="ppvx_row transactionRow dateBucket">
+                                                <span class="dateBucketText ppvx_text--caption-strong">
+                                                    <strong>{{ $db }}</strong>
+                                                </span>
+                                            </li>
+                                            {{ $dbc = $db }}
+                                        {{ end }}
+                                    {{ end }}
+
                                     <li class="transactionRow transactionRowHover js_transactionItem-5YX357455S5907308 placeholderBorder" data-creation-time-bucket="LessThan1Week" data-href="/myaccount/transactions/details/5YX357455S5907308">
                                         <div class="transactionItem js_transactionItem nemo_transactionItem">
                                             <div class="ppvx_row ppvx_no-gutters linkedBlock js_linkedBlock " data-href="/myaccount/transactions/details/5YX357455S5907308" aria-expanded="false" aria-controls="transactionDetails-5YX357455S5907308" aria-describedby="txnDate-5YX357455S5907308 txnAmountAndCurrency-5YX357455S5907308" tabindex="0">
@@ -700,8 +695,7 @@
                                         </div>
                                         <div id="transactionDetails-5YX357455S5907308" class="js_transactionDetails highlightTransactionPanel hide" role="region" aria-busy="false" aria-labelledby="txnDescription-5YX357455S5907308"></div>
                                     </li>
-                                {{end}}
-
+                                {{ end }}
 
 
 
