--- a/tmpl/_assets.html
+++ b/tmpl/_assets.html
@@ -225,7 +225,7 @@
 
                                                                                 </div>
                                                                                 <div
-                                                                                        class="Flex-l69ttv-0 HorizontalAxis__Container-c59t6n-0 HorizontalAxis__Container-c59t6n-0">
+                                                                                        class="Flex-l69ttv-0 HorizontalAxis__Container-c59t6n-0 bqceig">
                                                             <span
                                                                     class="TextElement__Spacer-hxkcw5-0 cicsNy Caps__StyledUppercase-sc-1m9jrwx-0 csSEWt HorizontalAxis__Item-c59t6n-1 hcMUfB">Nov
                                                               21</span><span
