--- a/tmpl/_layout.html
+++ b/tmpl/_layout.html
@@ -15,7 +15,7 @@
                                             <c-menu></c-menu>
                                         </div>
                                     </div>
-                                    <c-assets></c-assets>
+                                    <router-view></router-view>
                                     <div class="Backdrop__LayoutBackdrop-sc-1xjhtm5-0 eFThaY"></div>
                                 </div>
                             </div>
