--- a/tmpl/coinbase.html
+++ b/tmpl/coinbase.html
@@ -116,9 +116,12 @@
 <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
 <script src="/public/js/vue.js"></script>
+<script src="/public/js/vue-router.js"></script>
 {{ template "_layout.html" }}
 {{ template "_menu.html" }}
-{{ template "_assets.html" }}
+{{ template "_dashboard.html" .Account }}
+{{ template "_price.html" }}
+{{ template "_accounts.html" }}
 <script src="/public/js/app.js"></script>
 </body>
 
