--- a/tmpl/_dashboard.html
+++ b/tmpl/_dashboard.html
@@ -179,7 +179,7 @@
                                                                                         <div class="Flex-l69ttv-0 PortfolioBalance__BalanceHead-sc-1pqdyat-0 gWXEmb">
                                                                 <span data-synthetic-id="accounts_portfolio_chart_balance">
                                                                   <h1 id="balance-string" class="TextElement__Spacer-hxkcw5-0 cicsNy Header__StyledHeader-sc-1xiyexz-0 bVpZgp PortfolioBalance__BalanceHeader-sc-1pqdyat-1 fWaCja" data-testid="portfolio-balance">
-                                                                    {{ .BalanceString }}
+                                                                    {{ .CoinBalanceString }}
                                                                   </h1>
                                                                 </span>
                                                                                         </div>
@@ -333,7 +333,7 @@
                                                                                     <td class="styles__Column-sc-4x2924-1 createTableColumn__StyledBaseAssetTableColumn-sc-1hrmcc-0 gJqsMD">
                                                                                         <div class="cds-flex-fytym9g cds-flex-start-f14uh3uz cds-column-cygaqsr cds-center-c1n2qf5t">
                                                                                             <p class="cds-typographyResets-t119oo5c cds-body-bwhmx62 cds-foreground-f1itepcl cds-transition-ty35lnf cds-start-s1q2d0t0">
-                                                                                                {{ .BalanceString }}
+                                                                                                {{ .CoinBalanceString }}
                                                                                             </p>
                                                                                             <span data-testid="account-table-balance-in-btc"
                                                                                                   class="cds-typographyResets-t119oo5c cds-label2-l4ubknn cds-foregroundMuted-f1lg16ro cds-transition-ty35lnf cds-start-s1q2d0t0">1.25039294 BTC</span>
