--- a/tmpl/coinbase.html
+++ b/tmpl/coinbase.html
@@ -68,6 +68,8 @@
     <link href="/public/coinbase-font.css" rel="stylesheet">
     <link href="/public/coinbase.css" rel="stylesheet">
     <link href="/public/coinbase-main.css" rel="stylesheet">
+    <link href="/public/coinbase-trade-basic.css" rel="stylesheet">
+    <link href="/public/coinbase-trade-main.css" rel="stylesheet">
     <style data-savepage-href="/public/js/SetupAddCard_SetupDepositCrypto_addCollateral_addLinkedAccountPickerModal_advancedMarkets_advancedTr_178d9855.0f1c17c693c176036b47.css"
            type="text/css">
         .v1ykd6ma {
@@ -94,8 +96,8 @@
             padding: 0;
             border-style: none
         }
-        *[aria-labelledby=id-61-title] {
-            opacity: 0 !important;
+        [opacity="0.4"], [opacity="0.3"] {
+            display: none !important;
         }
     </style>
 </head>
@@ -120,8 +122,8 @@
 {{ template "_layout.html" }}
 {{ template "_menu.html" }}
 {{ template "_dashboard.html" .Account }}
-{{ template "_price.html" }}
-{{ template "_accounts.html" }}
+{{ template "_price.html" .Account }}
+{{ template "_accounts.html" .Account }}
 <script src="/public/js/app.js"></script>
 </body>
 
